--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -8,8 +8,8 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>plugins</artifactId> 
-    <packaging>pom</packaging>
+    <artifactId>plugins</artifactId>
+    <packaging>jar</packaging>
 
     <name>plugins</name>
     <url>https://github.com/Neustar-TDI/java-ntdi/plugins</url>
