--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>biz.neustar.tdi</groupId>
-		<artifactId>java-ntdi</artifactId>
+		<artifactId>ntdi-sdk-java</artifactId>
 		<version>1.0</version>
 	</parent>
 
@@ -12,7 +12,7 @@
 	<packaging>pom</packaging>
 
 	<name>examples</name>
-	<url>https://github.com/Neustar-TDI/java-ntdi/examples</url>
+	<url>https://github.com/Neustar-TDI/ntdi-sdk-java/examples</url>
 
 	<modules>
 		<module>platform</module>
