--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>biz.neustar.tdi</groupId>
-		<artifactId>java-ntdi</artifactId>
+		<artifactId>ntdi-sdk-java</artifactId>
 		<version>1.0</version>
 	</parent>
 
@@ -12,5 +12,5 @@
 	<packaging>jar</packaging>
 
 	<name>framework</name>
-	<url>https://github.com/Neustar-TDI/java-ntdi/framework</url>
+	<url>https://github.com/Neustar-TDI/ntdi-sdk-java/framework</url>
 </project>
