--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>biz.neustar.tdi</groupId>
-		<artifactId>java-ntdi</artifactId>
+		<artifactId>ntdi-sdk-java</artifactId>
 		<version>1.0</version>
 	</parent>
 
@@ -12,7 +12,7 @@
 	<packaging>jar</packaging>
 
 	<name>sdk</name>
-	<url>https://github.com/Neustar-TDI/java-ntdi/sdk</url>
+	<url>https://github.com/Neustar-TDI/ntdi-sdk-java/sdk</url>
 
 	<dependencies>
 		<dependency>
