--- a/examples/fleet-with-gateway/device-sensor/pom.xml
+++ b/examples/fleet-with-gateway/device-sensor/pom.xml
@@ -1,14 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>biz.neustar.tdi</groupId>
-  <artifactId>coredemo</artifactId>
+  <artifactId>device-sensor</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
 
-  <name>coredemo</name>
-  <url>https://github.com/Neustar-TDI/ntdi-sdk-java</url>
+  <name>device-sensor</name>
+  <url>https://github.com/Neustar-TDI/ntdi-sdk-java/examples/fleet-with-gateway/device-sensor</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,37 +16,39 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>Eclipse Paho Repo</id>
+      <url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>biz.neustar.tdi</groupId>
-      <artifactId>framework</artifactId>
+      <artifactId>tdi</artifactId>
       <version>1.0</version>
     </dependency>
     <dependency>
-      <groupId>biz.neustar.tdi</groupId>
-      <artifactId>sdk</artifactId>
-      <version>1.0</version>
+      <groupId>org.eclipse.paho</groupId>
+      <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
-      <groupId>biz.neustar.tdi</groupId>
-      <artifactId>platform</artifactId>
-      <version>1.0</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
     </dependency>
     <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.2</version>
-      <scope>compile</scope>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.25</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
-    	<groupId>com.fasterxml.jackson.core</groupId>
-    	<artifactId>jackson-core</artifactId>
-    	<version>2.8.7</version>
-  	</dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.7.4</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
     </dependency>
   </dependencies>
 
@@ -58,14 +59,14 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.6.0</version>
         <executions>
-        	<execution>
-          	<goals>
-          	<goal>java</goal>
-          	</goals>
-        	</execution>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
         </executions>
         <configuration>
-        	<mainClass>biz.neustar.tdi.Sensor</mainClass>
+          <mainClass>biz.neustar.tdi.examples.SensorController</mainClass>
           <cleanupDaemonThreads>false</cleanupDaemonThreads>
         </configuration>
       </plugin>
