--- a/examples/fleet-with-gateway/device-gateway/src/main/resources/tdi/sample-config.json
+++ b/examples/fleet-with-gateway/device-gateway/src/main/resources/tdi/sample-config.json
@@ -1,10 +1,10 @@
 {
 	"platform": {
 		"data": {
-			"basepath": "src/main/resources/cosign/"
+			"basepath": "src/main/resources/tdi/"
 		},
 		"keys": {
-			"basepath": "src/main/resources/cosign/"
+			"basepath": "src/main/resources/tdi/"
 		}
 	},
 	"nonce002": {
