feat(example/fleet-with-gateway): data service

--- a/examples/fleet-with-gateway/pom.xml
+++ b/examples/fleet-with-gateway/pom.xml
@@ -17,5 +17,6 @@
 	<modules>
 		<module>device-sensor</module>
 		<module>device-gateway</module>
+		<module>server-data-collector</module>
 	</modules>
 </project>
