--- a/examples/fleet-with-gateway/server-data-collector/pom.xml
+++ b/examples/fleet-with-gateway/server-data-collector/pom.xml
@@ -1,19 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>biz.neustar.tdi</groupId>
-  <artifactId>serverexample</artifactId>
+  <artifactId>server-data-collector</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
 
-  <name>serverexample</name>
-  <url>https://github.com/Neustar-TDI/ntdi-sdk-java</url>
+  <name>server-data-collector</name>
+  <url>https://github.com/Neustar-TDI/ntdi-sdk-java/examples/fleet-with-gateway/server-data-collector</url>
 
-	<!--
-		Local dev JAR can be installed like this...
-		mvn install:install-file -Dfile=/home/ian/working-copies/Neustar/ntdi-sdk-java/sdk/target/sdk-1.0.jar -DgroupId=biz.neustar.tdi -DartifactId=plugins -Dversion=1.0 -Dpackaging=jar -DgeneratePom=true
-	-->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -21,26 +16,28 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>Eclipse Paho Repo</id>
+      <url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>biz.neustar.tdi</groupId>
-      <artifactId>framework</artifactId>
+      <artifactId>tdi</artifactId>
       <version>1.0</version>
     </dependency>
     <dependency>
-      <groupId>biz.neustar.tdi</groupId>
-      <artifactId>sdk</artifactId>
-      <version>1.0</version>
+      <groupId>org.eclipse.paho</groupId>
+      <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
-      <groupId>biz.neustar.tdi</groupId>
-      <artifactId>platform</artifactId>
-      <version>1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>biz.neustar.tdi</groupId>
-      <artifactId>plugins</artifactId>
-      <version>1.0</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -49,20 +46,9 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.2</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-    <version>2.8.7</version>
-  </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.7.4</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
     </dependency>
   </dependencies>
 
@@ -73,65 +59,16 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.6.0</version>
         <executions>
-        <execution>
-          <goals>
-          <goal>java</goal>
-          </goals>
-        </execution>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
         </executions>
         <configuration>
-        <mainClass>biz.neustar.tdi.Server</mainClass>
+          <mainClass>biz.neustar.tdi.examples.DataCollectionService</mainClass>
           <cleanupDaemonThreads>false</cleanupDaemonThreads>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-install-plugin</artifactId>
-        <version>2.4</version>
-        <executions>
-          <execution>
-            <id>1</id>
-            <phase>initialize</phase>
-            <goals>
-                <goal>install-file</goal>
-            </goals>
-            <configuration>
-              <groupId>biz.neustar.tdi</groupId>
-              <artifactId>sdk</artifactId>
-              <version>1.0</version>
-              <packaging>jar</packaging>
-              <file>${basedir}/../ntdi-sdk-java/sdk/target/sdk-1.0.jar</file>
-            </configuration>
-          </execution>
-          <execution>
-            <id>2</id>
-            <phase>initialize</phase>
-            <goals>
-                <goal>install-file</goal>
-            </goals>
-            <configuration>
-              <groupId>biz.neustar.tdi</groupId>
-              <artifactId>plugins</artifactId>
-              <version>1.0</version>
-              <packaging>jar</packaging>
-              <file>${basedir}/../ntdi-sdk-java/plugins/target/plugins-1.0.jar</file>
-            </configuration>
-          </execution>
-          <execution>
-            <id>3</id>
-            <phase>initialize</phase>
-            <goals>
-                <goal>install-file</goal>
-            </goals>
-            <configuration>
-              <groupId>biz.neustar.tdi</groupId>
-              <artifactId>framework</artifactId>
-              <version>1.0</version>
-              <packaging>jar</packaging>
-              <file>${basedir}/../ntdi-sdk-java/framework/target/framework-1.0.jar</file>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
