Feature/yv/unit test (#11)
* Fix javadoc

* Fix JUnit test - sign/cosign

* Fix Circle CI

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -1,29 +1,98 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>biz.neustar.tdi</groupId>
-        <artifactId>ntdi-sdk-java</artifactId>
-        <version>1.0</version>
-    </parent>
+	<parent>
+		<groupId>biz.neustar.tdi</groupId>
+		<artifactId>ntdi-sdk-java</artifactId>
+		<version>1.0</version>
+	</parent>
 
-    <artifactId>plugins</artifactId>
-    <packaging>jar</packaging>
+	<artifactId>plugins</artifactId>
+	<packaging>jar</packaging>
 
-    <name>plugins</name>
-    <url>https://github.com/Neustar-TDI/ntdi-sdk-java/plugins</url>
+	<name>plugins</name>
+	<url>https://github.com/Neustar-TDI/ntdi-sdk-java/plugins</url>
 
-    <dependencies>
-        <dependency>
-            <groupId>biz.neustar.tdi</groupId>
-            <artifactId>framework</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>biz.neustar.tdi</groupId>
-            <artifactId>sdk</artifactId>
-            <version>1.0</version>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>biz.neustar.tdi</groupId>
+			<artifactId>framework</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>biz.neustar.tdi</groupId>
+			<artifactId>sdk</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>biz.neustar.tdi</groupId>
+			<artifactId>platform</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.25</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.7.4</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.coderplus.maven.plugins</groupId>
+				<artifactId>copy-rename-maven-plugin</artifactId>
+				<version>1.0</version>
+				<executions>
+					<execution>
+						<id>copy-file</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<fileSets>
+								<fileSet>
+									<sourceFile>src/test/resources/sign/keystore-test.json</sourceFile>
+									<destinationFile>src/test/resources/sign/keystore.json</destinationFile>
+								</fileSet>
+								<fileSet>
+									<sourceFile>src/test/resources/cosign/keystore-test.json</sourceFile>
+									<destinationFile>src/test/resources/cosign/keystore.json</destinationFile>
+								</fileSet>
+								<fileSet>
+									<sourceFile>src/test/resources/device/keystore-test.json</sourceFile>
+									<destinationFile>src/test/resources/device/keystore.json</destinationFile>
+								</fileSet>
+								<fileSet>
+									<sourceFile>src/test/resources/server/keystore-test.json</sourceFile>
+									<destinationFile>src/test/resources/server/keystore.json</destinationFile>
+								</fileSet>
+								<fileSet>
+									<sourceFile>src/test/resources/verify/keystore-test.json</sourceFile>
+									<destinationFile>src/test/resources/verify/keystore.json</destinationFile>
+								</fileSet>
+							</fileSets>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
