feat(example/fleet-with-gateway): action service

--- a/examples/fleet-with-gateway/pom.xml
+++ b/examples/fleet-with-gateway/pom.xml
@@ -18,5 +18,6 @@
 		<module>device-sensor</module>
 		<module>device-gateway</module>
 		<module>server-data-collector</module>
+		<module>server-actuator</module>
 	</modules>
 </project>
