--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>plugins</module>
     <module>framework</module>
     <module>sdk</module>
+    <module>tdi</module>
     <module>examples</module>
   </modules>
 
