Example Fleet with Gateway (#24)
* chore: roughly copy examples from other repos

* chore: fleet-with-gateway example initial setup

* feat(example/fleet-with-gateway): sensor device

* feat(example/fleet-with-gateway): gateway device

* feat(example/fleet-with-gateway): data service

* feat(example/fleet-with-gateway): action service

--- a/examples/fleet-with-gateway/pom.xml
+++ b/examples/fleet-with-gateway/pom.xml
@@ -4,18 +4,20 @@
 
 	<parent>
 		<groupId>biz.neustar.tdi</groupId>
-		<artifactId>ntdi-sdk-java</artifactId>
+		<artifactId>examples</artifactId>
 		<version>1.0</version>
 	</parent>
 
-	<artifactId>examples</artifactId>
+	<artifactId>fleet-with-gateway</artifactId>
 	<packaging>pom</packaging>
 
-	<name>examples</name>
-	<url>https://github.com/Neustar-TDI/ntdi-sdk-java/examples</url>
+	<name>fleet-with-gateway</name>
+	<url>https://github.com/Neustar-TDI/ntdi-sdk-java/examples/fleet-with-gateway</url>
 
 	<modules>
-		<module>platform</module>
-		<module>fleet-with-gateway</module>
+		<module>device-sensor</module>
+		<module>device-gateway</module>
+		<module>server-data-collector</module>
+		<module>server-actuator</module>
 	</modules>
 </project>
