--- a/examples/fleet-with-gateway/server-actuator/config/tdi/sample-config.json
+++ b/examples/fleet-with-gateway/server-actuator/config/tdi/sample-config.json
@@ -1,10 +1,10 @@
 {
   "platform": {
     "data": {
-      "basepath": "src/main/resources/tdi/"
+      "basepath": "config/tdi/"
     },
     "keys": {
-      "basepath": "src/main/resources/tdi/"
+      "basepath": "config/tdi/"
     }
   },
   "nonce002": {
